fix: change blocks width, change cover image, hide scrollbar

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -19,7 +19,7 @@ code {
 }
 
 html::-webkit-scrollbar {
-	width: 10px;
+	/* width: 10px; */
 }
 html::-webkit-scrollbar-thumb {
 	background-color: #c2ff5d;
