--- a/src/pages/landing/index.css
+++ b/src/pages/landing/index.css
@@ -11,7 +11,7 @@
 
 .landing__header-outer-container {
 	background-color: transparent;
-	max-width: 1440px;
+	width: 100%;
 	padding: 40px 64px 0;
 	margin: 0 auto;
 }
@@ -77,7 +77,7 @@
 
 .landing__main {
 	background-color: var(--color-light-bg);
-	max-width: 1440px;
+	width: 100%;
 	margin: 0 auto;
 }
 
@@ -314,7 +314,7 @@
 }
 
 .landing__footer {
-	max-width: 1440px;
+	width: 100%;
 	margin: 0 auto;
 	padding: 200px 100px 100px;
 	display: flex;
